# nrf-play

./: Cargo.toml  README.md
src/: lib.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
