[package]
# TODO(1) fix `authors` if you didn't use `cargo-generate`
authors = ["Henrik AlseÌr <henrik.alser@me.com>"]
name = "testsuite"
publish = false
edition = "2018"
version = "0.1.0"

[lib]
harness = false

[[test]]
name = "test"
harness = false

[dependencies]
nrf-play = { path = ".." }
cortex-m = "0.7.1"
cortex-m-rt = "0.6.12"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[features]
# set logging levels here
default = []
